fix(material-docs-app): remove absolute positioning of all content (#840)
- preserve behavior of not having a scrollbar next to the toolbar
- hide theme picker on small devices (iPhone 5) so that navbar doesn't wrap

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/shared/navbar/navbar.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/shared/navbar/navbar.scss
@@ -69,3 +69,11 @@
     margin: 0;
   }
 }
+
+theme-picker {
+  display: none;
+
+  @media (min-width: 328px) {
+    display: block;
+  }
+}
