--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/styles/_general.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/styles/_general.scss
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100vh;
+}
+
 body {
   font-family: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
   margin: 0;
